[gd_scene load_steps=26 format=3 uid="uid://cr4bprhtqi4bh"]

[ext_resource type="Script" path="res://play/actors/enemies/basic_enemy/basic_enemy.gd" id="1_51y5s"]
[ext_resource type="Resource" uid="uid://c2v2jei5ec162" path="res://play/actors/enemies/basic_enemy/basic_enemy.tres" id="2_nj862"]
[ext_resource type="Resource" uid="uid://ctxing8jpajsm" path="res://play/actors/enemies/ghost/ghost_data.tres" id="2_xarag"]
[ext_resource type="Script" path="res://play/resources/data/enemy_data/enemy_data.gd" id="3_ohslr"]
[ext_resource type="Resource" uid="uid://dstawtytxnu4h" path="res://play/actors/enemies/bat/bat_data.tres" id="4_l05x4"]
[ext_resource type="Resource" uid="uid://dx6ughedvqda6" path="res://play/actors/enemies/tiny_ghost/tiny_ghost.tres" id="5_4rwpp"]
[ext_resource type="PackedScene" uid="uid://2l85qpttmm5p" path="res://play/resources/components/detect_area_component/detect_area_component.tscn" id="5_ggia5"]
[ext_resource type="PackedScene" uid="uid://cvd5oclhm0tm7" path="res://play/resources/components/hurt_box_component/hurt_box_component.tscn" id="6_jb3x7"]
[ext_resource type="PackedScene" uid="uid://crtue82sxdi1q" path="res://play/resources/components/hit_box_component/hit_box_component.tscn" id="7_7dmdh"]
[ext_resource type="Script" path="res://play/resources/data/attack_data/attack_resource.gd" id="8_r10ow"]
[ext_resource type="Script" path="res://play/resources/state_machine/state_machine.gd" id="9_edu1u"]
[ext_resource type="PackedScene" uid="uid://dfvc0emmg1p3s" path="res://play/resources/components/path_finding_component/path_finding_component.tscn" id="11_i0liq"]
[ext_resource type="Script" path="res://play/actors/enemies/basic_enemy/states/move.gd" id="11_l87ob"]
[ext_resource type="PackedScene" uid="uid://wagjkpckrvmf" path="res://play/resources/components/velocity_component/velocity_component.tscn" id="12_6ww1m"]
[ext_resource type="Script" path="res://play/actors/enemies/basic_enemy/states/attack.gd" id="14_kww4e"]
[ext_resource type="PackedScene" uid="uid://dlrfdle8sk8ec" path="res://play/resources/components/healt_component/healt_component.tscn" id="15_61wjt"]
[ext_resource type="Script" path="res://play/actors/enemies/basic_enemy/states/hurt.gd" id="15_a0laj"]
[ext_resource type="Script" path="res://play/actors/enemies/basic_enemy/states/dead.gd" id="17_3fxf7"]
[ext_resource type="PackedScene" uid="uid://bsk81rsln3fxp" path="res://play/resources/components/path_finding_component/navigation_component.tscn" id="17_a15lm"]
[ext_resource type="AnimationLibrary" uid="uid://bqlpssqsmjgds" path="res://play/actors/enemies/basic_enemy/basic_enemy_animations.res" id="18_hcbrf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j2oj4"]
size = Vector2(10, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_7rghk"]
radius = 13.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v5jp6"]
size = Vector2(16, 15)

[sub_resource type="Resource" id="Resource_sjnj4"]
resource_local_to_scene = true
script = ExtResource("8_r10ow")
attack_damage = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_surod"]
radius = 18.0

[node name="BasicEnemy" type="CharacterBody2D" node_paths=PackedStringArray("health_component", "velocity_component", "hit_box_component", "path_finding_component", "navigation_component", "detect_area_component", "anim", "sprite") groups=["Enemy"]]
collision_layer = 2
collision_mask = 2
motion_mode = 1
script = ExtResource("1_51y5s")
health_component = NodePath("StateMachine/Hurt/HealthComponent")
velocity_component = NodePath("StateMachine/Move/VelocityComponent")
hit_box_component = NodePath("HitBoxComponent")
path_finding_component = NodePath("StateMachine/Move/PathFindingComponent")
navigation_component = NodePath("NavigationComponent")
detect_area_component = NodePath("DetectAreaComponent")
anim = NodePath("AnimationPlayer")
sprite = NodePath("Sprite2D")
enemy_data = ExtResource("2_nj862")
enemy_data_types = Array[ExtResource("3_ohslr")]([ExtResource("2_xarag"), ExtResource("4_l05x4"), ExtResource("5_4rwpp")])

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_j2oj4")
disabled = true

[node name="DetectAreaComponent" parent="." instance=ExtResource("5_ggia5")]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectAreaComponent"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_7rghk")

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("6_jb3x7")]
collision_layer = 2
collision_mask = 25
health_component = NodePath("../StateMachine/Hurt/HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_v5jp6")

[node name="HitBoxComponent" parent="." instance=ExtResource("7_7dmdh")]
collision_layer = 2
monitoring = false
data = SubResource("Resource_sjnj4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_surod")
disabled = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("9_edu1u")
initial_state = NodePath("Move")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("11_l87ob")

[node name="PathFindingComponent" parent="StateMachine/Move" node_paths=PackedStringArray("velocity_component", "navigation_component") instance=ExtResource("11_i0liq")]
velocity_component = NodePath("../VelocityComponent")
navigation_component = NodePath("../../../NavigationComponent")
continuous_following_target = true

[node name="VelocityComponent" parent="StateMachine/Move" instance=ExtResource("12_6ww1m")]
max_speed = 100.0
min_speed = 100.0
speed = 70.0

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("14_kww4e")

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource("15_a0laj")

[node name="HealthComponent" parent="StateMachine/Hurt" instance=ExtResource("15_61wjt")]
max_health = 10

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("17_3fxf7")

[node name="NavigationComponent" parent="." node_paths=PackedStringArray("navigation_entitie") instance=ExtResource("17_a15lm")]
navigation_layers = 4
avoidance_enabled = true
radius = 20.0
avoidance_layers = 2
avoidance_mask = 14
navigation_entitie = NodePath("..")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": ExtResource("18_hcbrf")
}
